--- a/Src/css/style.css
+++ b/Src/css/style.css
@@ -104,11 +104,12 @@ body {
 .request__wrapper {
   display: grid;
   grid-template-columns: 1fr;
+  gap: 5rem;
 }
 @media (min-width: 768px) {
   .request__wrapper {
     grid-template-columns: repeat(2, 1fr);
-    gap: 2rem 4rem;
+    gap: 6rem 4rem;
   }
 }
 @media (min-width: 1024px) {
@@ -120,16 +121,15 @@ body {
 .request {
   width: 100%;
   max-width: 400px;
-  height: 200px;
 }
 
 .requset__header {
   display: flex;
   justify-content: flex-start;
   align-items: center;
+  column-gap: 1rem;
 }
 .requset__header p {
-  margin-right: 1rem;
   color: var(--color-blue-700);
   font-weight: 500;
 }
@@ -154,6 +154,7 @@ body {
   flex: 1;
   display: flex;
   align-items: center;
+  column-gap: 1rem;
 }
 .user__info img {
   width: 40px;
@@ -161,7 +162,6 @@ body {
   border-radius: var(--border-radius-sm);
 }
 .user__info p {
-  margin-right: 1rem;
   font-weight: 700;
   color: var(--color-gray-700);
   display: inline;
