--- a/Src/sass/_base.scss
+++ b/Src/sass/_base.scss
@@ -63,10 +63,11 @@ body {
 .request__wrapper {
   display: grid;
   grid-template-columns: 1fr;
+  gap: 5rem;
 
   @include mediaQuery('md') {
     grid-template-columns: repeat(2, 1fr);
-    gap: 2rem 4rem;
+    gap: 6rem 4rem;
   }
 
   @include mediaQuery('lg') {
@@ -77,18 +78,16 @@ body {
 .request {
   width: 100%;
   max-width: 400px;
-  height: 200px;
-
 }
 
 .requset__header {
   @include flex() {
     justify-content: flex-start;
     align-items: center;
+    column-gap: 1rem;
   }
 
   p {
-    margin-right: 1rem;
     color: var(--color-blue-700);
     font-weight: 500;
   }
@@ -117,6 +116,7 @@ body {
 
   @include flex() {
     align-items: center;
+    column-gap: 1rem;
   }
 
   img {
@@ -126,7 +126,6 @@ body {
   }
 
   p {
-    margin-right: 1rem;
     font-weight: 700;
     color: var(--color-gray-700);
     display: inline;
